src/test/ui/consts/dangling-alloc-id-ice.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/dangling-alloc-id-ice.rs:9:1
   |
LL | / const FOO: &() = {
LL | |
LL | |     let y = ();
LL | |     unsafe { Foo { y: &y }.long_live_the_unit }
LL | | };
   | |__^ type validation failed: encountered a dangling reference (use-after-free)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
